syntax = "proto3";

package auth_api_v1;

option go_package = "github.com/Shemistan/grpc_user_api/pkg/auth_api_v1;auth_api_v1";

import "validate/validate.proto";

// AuthV1 Сервис авторизации
service AuthV1 {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc GetRefreshToken (GetRefreshTokenRequest) returns (GetRefreshTokenResponse);
  rpc GetAccessToken (GetAccessTokenRequest) returns (GetAccessTokenResponse);
}

message LoginRequest {
  string login = 1 [(validate.rules).message = { required: true }];
  string password = 2 [(validate.rules).message = { required: true }];
}

message LoginResponse {
  string refresh_token = 1;
  string access_token = 2;
}

message GetRefreshTokenRequest {
  string refresh_token = 1 [(validate.rules).message = { required: true }];
}

message GetRefreshTokenResponse {
  string refresh_token = 1;
}

message GetAccessTokenRequest {
  string access_token = 1 [(validate.rules).message = { required: true }];
}

message GetAccessTokenResponse {
  string access_token = 1;
}

